--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,7 @@
   <body>
     <header>
       <div>
-        <h1>Happiest Birthday My Dear Favourite Person!!</h1>
+        <h1>Happiest Birthday My favorite women!!</h1>
     
       </div>
     </header>
@@ -55,7 +55,7 @@
         </p>
         <p>
           once again happy birthday my pro mayasa, my angel, my sundari angel,
-          my kuchuu puchuu, my pineapple, my kaju katli, my rasmalai, my cutie pie...
+          my kuchuu puchuu, my pineapple, my kaju katli, my rasmalai, my cutie pie,my favorite women,my bubu,my bachu,my little baby...
         </p>
       </div>
 
@@ -66,7 +66,7 @@
     </main>
     <p class="message">
         Mumu, I don’t know how to say this perfectly, but I just want you to know that you are really special to me.
-Every small moment with you stays in my <br>
+Every small moment with you stays in my heart forever <br>
 You make my days better without even trying.<br>
 
 Even when we fight or misunderstand each other, I still care about you the same.
@@ -76,3 +76,4 @@ I’m happy you are in my life, and I hope I can stay in yours too. <br>
     <footer></footer>
   </body>
 </html>
+
