Revise birthday message in index.htm
Updated birthday message for Mumu with additional text and emojis.

--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,7 @@
   <body>
     <header>
       <div>
-        <h1>Happiest Birthday My favorite women!!</h1>
+        <h1>Happiest Birthday My favorite Women!!</h1>
     
       </div>
     </header>
@@ -44,18 +44,18 @@
       </h2>
         <p>
           Happy birthday to you my dear Mumu. On this special day,
-          I want to remind you how much you mean to me. You are not just
+          I want to remind you how much you mean to me... You are not just
           my favourite person but also the light of my life.
         </p>
         <h2>Remember!!</h2>
-        <p>sorry but u know wht one day i am goona be papa....hehehe</p>
+        <p>sorry but u know wht… one day I am gonna be papa… hehe 😭💗</p>
         <p>
           I have seen my happiest version with you and I look forward
           to creating many more beautiful and funny moments together.
         </p>
         <p>
           once again happy birthday my pro mayasa, my angel, my sundari angel,
-          my kuchuu puchuu, my pineapple, my kaju katli, my rasmalai, my cutie pie,my favorite women,my bubu,my bachu,my little baby...
+          my kuchuu puchuu, my pineapple, my kaju katli, my rasmalai, my cutie pie,my favorite woman,my bubu,my bachu,my little baby...
         </p>
       </div>
 
@@ -66,14 +66,15 @@
     </main>
     <p class="message">
         Mumu, I don’t know how to say this perfectly, but I just want you to know that you are really special to me.
-Every small moment with you stays in my heart forever <br>
+Every small moment with you stays in my heart forever... <br>
 You make my days better without even trying.<br>
 
-Even when we fight or misunderstand each other, I still care about you the same.
+Even when we fight or misunderstand each other, I still care about you the same....
 I don’t want to lose you. <br>
 I’m happy you are in my life, and I hope I can stay in yours too. <br>
     </p>
     <footer></footer>
   </body>
 </html>
+
 
