--- a/index.htm
+++ b/index.htm
@@ -28,7 +28,7 @@
         <img src="mumu.png" alt="herr" />
         
         <div class="container">
-  <button class="open-btn">cilck here Mumu</button>
+  <button class="open-btn">Opem This Card Mumu</button>
 
   <div class="card">
     <div class="card-inner">
@@ -43,19 +43,16 @@
         To my dearest Mumu,
       </h2>
         <p>
-          Happy birthday to you my dear Mumu. On this special day,
-          I want to remind you how much you mean to me... You are not just
-          my favourite person but also the light of my life.
+          Happy birthday to you my dear Mumu 🎉💛
+On this special day, I want to remind you how much you mean to me... You are not just my favourite person but also the light of my life ✨💗
         </p>
         <h2>Remember!!</h2>
         <p>sorry but u know wht… one day I am gonna be papa… hehe 😭💗</p>
         <p>
-          I have seen my happiest version with you and I look forward
-          to creating many more beautiful and funny moments together.
+        I have seen my happiest version with you, and I look forward to creating many more beautiful and funny moments together 🌈💫
         </p>
         <p>
-          once again happy birthday my pro mayasa, my angel, my sundari angel,
-          my kuchuu puchuu, my pineapple, my kaju katli, my rasmalai, my cutie pie,my favorite woman,my bubu,my bachu,my little baby...
+         Once again happy birthday my pro mayasa, my angel, my sundari angel, my kuchuu puchuu, my pineapple 🍍, my kaju katli, my rasmalai 🍰, my cutie pie, my favorite woman ❤️, my bubu, my bachu, my little baby 🧸💞
         </p>
       </div>
 
@@ -65,16 +62,16 @@
 
     </main>
     <p class="message">
-        Mumu, I don’t know how to say this perfectly, but I just want you to know that you are really special to me.
-Every small moment with you stays in my heart forever... <br>
-You make my days better without even trying.<br>
+        Mumu, I don’t know how to say this perfectly, but I just want you to know that you are really special to me 🫶
+Every small moment with you stays in my heart forever... 💛<br>
+You make my days better without even trying ☀️<br>
 
-Even when we fight or misunderstand each other, I still care about you the same....
-I don’t want to lose you. <br>
-I’m happy you are in my life, and I hope I can stay in yours too. <br>
+Even when we fight or misunderstand each other, I still care about you the same… I don’t want to lose you 💗<br>
+I’m happy you are in my life, and I hope I can stay in yours too 🤍✨ <br>
     </p>
-    <footer></footer>
+    <footer>The one and only Meet aka.Tyson...The one and only piece in the world</footer>
   </body>
 </html>
+
 
 
