Clean up index.htm and fix footer content
Removed extra content and fixed minor issues in the HTML structure.

--- a/index.htm
+++ b/index.htm
@@ -69,9 +69,10 @@ You make my days better without even trying ☀️<br>
 Even when we fight or misunderstand each other, I still care about you the same… I don’t want to lose you 💗<br>
 I’m happy you are in my life, and I hope I can stay in yours too 🤍✨ <br>
     </p>
-    <footer>The one and only Meet aka.Tyson...The one and only piece in the world</footer>
+    <footer></footer>
   </body>
 </html>
+
 
 
 
