Fix HTML encoding issues in index.htm

--- a/index.htm
+++ b/index.htm
@@ -28,7 +28,7 @@
         <img src="mumu.png" alt="herr" />
         
         <div class="container">
-  <button class="open-btn">Opem This Card Mumu</button>
+  <button class="open-btn">Open This Card Mumu</button>
 
   <div class="card">
     <div class="card-inner">
@@ -72,6 +72,7 @@ I’m happy you are in my life, and I hope I can stay in yours too 🤍✨ <br>
     <footer></footer>
   </body>
 </html>
+
 
 
 
